--- a/alx.html
+++ b/alx.html
@@ -227,10 +227,10 @@
             </div>
 
 
-            div>
-            <img src="css_advanced/smile.png" alt="Smile image">
-            <h3>Lorem ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <div>
+                <img src="css_advanced/smile.png" alt="Smile image">
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
             </div>
 
